fix: correct mobile menu button alignment vol.5

--- a/css/style.css
+++ b/css/style.css
@@ -3270,14 +3270,12 @@ template {
   line-height: 18px;
   font-weight: 400;
   font-family: "Gilroy", sans-serif;
-  position: relative;
-  display: flex;
-  align-items: center;
   width: 100%;
   margin-bottom: 17px;
   padding: 19px 0 19px 30px;
   border-bottom: 1px solid #525252;
-  color: #a4a4a4; }
+  color: #a4a4a4;
+  background: url("../img/icons/icon-arrow-breadcrumbs.svg") 6px 50%/10px auto no-repeat; }
   @media screen and (max-width: 375px) {
     .mobile-catalog__back-link {
       font-size: 18px; } }
@@ -3285,18 +3283,8 @@ template {
     .mobile-catalog__back-link {
       font-size: 18px; } }
   .mobile-catalog__back-link:hover, .mobile-catalog__back-link:focus {
-    color: #ff0a0a; }
-
-.mobile-catalog__link-icon {
-  position: absolute;
-  top: 21px;
-  left: 7px;
-  margin-right: 15px;
-  fill: transparent;
-  stroke: #a4a4a4; }
-  .mobile-catalog__back-link:hover .mobile-catalog__link-icon,
-  .mobile-catalog__back-link:focus .mobile-catalog__link-icon {
-    stroke: #ff0a0a; }
+    color: #ff0a0a;
+    background: url("../img/icons/icon-arrow-breadcrumbs-active.svg") 6px 50%/10px auto no-repeat; }
 
 .mobile-catalog__list {
   margin: 0;
